1.4
-------------------------

- perform distributed testing related reporting in the plugin 
  rather than having dist-related code in the generic py.test 
  distribution

- depend on execnet-1.0.7 which adds "env1:NAME=value" keys to 
  gateway specification strings. 

1.3
-------------------------

- fix --looponfailing - it would not actually run against the fully changed
  source tree when initial conftest files load application state. 

- adapt for py-1.3.1's new --maxfailure option 

1.2
-------------------------

- fix issue79: sessionfinish/teardown hooks are now called systematically 
  on the slave side 
- introduce a new data input/output mechanism to allow the master side 
  to send and receive data from a slave. 
- fix race condition in underlying pickling/unpickling handling 
- use and require new register hooks facility of py.test>=1.3.0 
- require improved execnet>=1.0.6 because of various race conditions 
  that can arise in xdist testing modes. 
- fix some python3 related pickling related race conditions 
- fix PyPI description 

1.1
-------------------------

- fix an indefinite hang which would wait for events although no events
  are pending - this happened if items arrive very quickly while 
  the "reschedule-event" tried unconditionally avoiding a busy-loop
  and not schedule new work. 

1.0
-------------------------

- moved code out of py-1.1.1 into its own plugin
- use a new, faster and more sensible model to do load-balancing 
  of tests - now no magic "MAXITEMSPERHOST" is needed and load-testing
  works effectively even with very few tests. 
- cleaned up termination handling 
- make -x cause hard killing of test nodes to decrease wait time 
  until the traceback shows up on first failure
